增加职位服务 增加角色服务

--- a/upms-core/src/main/resources/i18n/message.properties
+++ b/upms-core/src/main/resources/i18n/message.properties
@@ -27,3 +27,13 @@ APP.FIELD.NAME=\u5E94\u7528\u7A0B\u5E8F\u4E2D\u6587\u540D\u79F0
 #org
 ORG.FIELD.ID=\u7EC4\u7EC7\u7F16\u53F7
 ORG.FIELD.CODE=\u7EC4\u7EC7\u4EE3\u7801
+#perm
+PERM.FIELD.ID=\u6743\u9650\u7F16\u53F7
+#role
+ROLE.FIELD.ID=\u89D2\u8272\u7F16\u53F7
+ROLE.FIELD.NAME.ZH=\u89D2\u8272\u4E2D\u6587\u540D\u79F0
+ROLE.FIELD.NAME.EH=\u89D2\u8272\u82F1\u6587\u540D\u79F0
+#jobtitle
+JOB.TITLE.ID=\u804C\u4F4D\u7F16\u53F7
+JOB.TITLE.NAME=\u804C\u4F4D\u540D\u79F0
+JOB.TITLE.NAME.EN=\u804C\u4F4D\u82F1\u6587\u540D\u79F0
